--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <section class="conteudo">
         <div class="conteudo-titulo">
             <img src="cadeado.png" alt="cadeado fechado">
-            <h2 class="titulo-principal">Gerador de senhas</h2>
-            <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
+            <h2 class="titulo-principal">Gerador de senhas KALUSZ</h2>
+            <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura para usar em qualquer lugar</h3>
         </div>
         <div class="conteudo-senha">
             <label for="senha">Senha</label>
             <input name="senha" type="text" id="campo-senha" readonly>
         </div>
         <div class="parametro">
-            <h3 class="parametro-titulo">Personalize sua senha</h3>
+            <h3 class="parametro-titulo">Personalização de senha</h3>
             <div class="parametro-coluna__senha">
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
